# Compiler

./: .gitignore  CMakeLists.txt  LexicalAnalyzer  data.h  decl.h  defs.h  main.c  scan.c  scanner  tree.c
Examples/: Example1.cpp  Example2  Example2.cpp  Example3  Example3.cpp  Example4  Example4.cpp  Example5  Example5.cpp  Example6  Example6.cpp  lex.yy.c  wordcount  wordcount.l
Experiment1/: CMakeLists.txt  LexicalAnalyzer.cpp
Experiment2/: CMakeLists.txt  SyntaxAnalyzer  SyntaxAnalyzer.cpp
InputOutput/: Expected.txt  Mine.txt  input.txt  output.txt
